test/compile-error/2/Solution.java
public class Solution {

  // Can't convert integer to string
  public String main(String a, String b) {
    return (String) 300;
  }

}
